Style: Fix alignment

--- a/output.css
+++ b/output.css
@@ -501,14 +501,18 @@ video {
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }
+.-mx-2 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
 .flex {
   display: flex;
 }
-.h-10 {
-  height: 2.5rem;
+.h-2 {
+  height: 0.5rem;
 }
-.h-5 {
-  height: 1.25rem;
+.h-7 {
+  height: 1.75rem;
 }
 .min-h-dvh {
   min-height: 100dvh;
@@ -519,15 +523,6 @@ video {
 .w-full {
   width: 100%;
 }
-.w-5 {
-  width: 1.25rem;
-}
-.w-14 {
-  width: 3.5rem;
-}
-.w-20 {
-  width: 5rem;
-}
 .flex-col {
   flex-direction: column;
 }
@@ -537,23 +532,35 @@ video {
 .justify-between {
   justify-content: space-between;
 }
-.gap-5 {
-  gap: 1.25rem;
+.gap-1 {
+  gap: 0.25rem;
 }
 .gap-3 {
   gap: 0.75rem;
 }
-.rounded-r-lg {
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+.gap-5 {
+  gap: 1.25rem;
 }
-.rounded-r-full {
-  border-top-right-radius: 9999px;
-  border-bottom-right-radius: 9999px;
+.rounded-sm {
+  border-radius: 0.125rem;
 }
-.bg-green-400 {
+.border-l-8 {
+  border-left-width: 8px;
+}
+.border-t-8 {
+  border-top-width: 8px;
+}
+.border-primary-text {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 229 224 / var(--tw-border-opacity));
+}
+.bg-green-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-orange-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
 }
 .bg-primary-black {
   --tw-bg-opacity: 1;
@@ -563,25 +570,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(238 229 224 / var(--tw-bg-opacity));
 }
-.bg-purple-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
-}
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
 }
 .font-LeagueGothic {
   font-family: League Gothic, sans-serif;
@@ -592,22 +591,12 @@ video {
 .text-\[15rem\] {
   font-size: 15rem;
 }
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-.text-\[17rem\] {
-  font-size: 17rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .text-\[16rem\] {
   font-size: 16rem;
-}
-.text-\[16\.5rem\] {
-  font-size: 16.5rem;
 }
 .font-extrabold {
   font-weight: 800;
@@ -615,8 +604,11 @@ video {
 .font-semibold {
   font-weight: 600;
 }
-.font-medium {
-  font-weight: 500;
+.font-bold {
+  font-weight: 700;
+}
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 .text-primary-text {
   --tw-text-opacity: 1;
